--- a/src/app/tictactoe/tictactoe.component.css
+++ b/src/app/tictactoe/tictactoe.component.css
@@ -34,3 +34,10 @@
 .game-row{
 display: flex;
 }
+.btn{
+  border: none;
+  outline: none;
+  font-size: large;
+  padding: 0.5em;
+  border-radius: 7px;
+}
